HW-7 feat: HW-6 merger